# audio-reactive-playground

./: .gitignore  LICENSE  README.md  pyproject.toml
src/audio_reactive_playground/: audio.py  main.py
src/audio_reactive_playground/visuals/: __init__.py  base.py  club.py  fields.py  fx.py  geometric.py  math_art.py  minimal.py  nature.py  oscillators.py  renderer.py  shapes.py  slick.py
test/: run_generative_test.sh  run_test.sh
